--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.6
   permission_handler: ^11.3.1
   font_awesome_flutter: ^10.7.0
+  percent_indicator: ^4.2.3
+  image_picker: ^1.1.2
+  file_picker: ^8.1.2
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
