--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,15 @@ dependencies:
   percent_indicator: ^4.2.3
   image_picker: ^1.1.2
   file_picker: ^8.1.2
-  http: ^0.13.5
+  http: ^1.2.2
+  flutter_secure_storage: ^8.0.0
+  shared_preferences: ^2.0.8
+  uuid: ^3.0.6
+  get: ^4.6.5
+  flutter_gemini: ^2.0.5
+  dash_chat_2: ^0.0.21
+  google_generative_ai: ^0.4.6
+
 
 dev_dependencies:
   flutter_test:
